--- a/CINESTOP/html/about.html
+++ b/CINESTOP/html/about.html
@@ -14,15 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <style>
-        img {
-            width: 100%;
-            height: 570px;
-            max-width: 100%;
-            background-size: cover;
-            z-index: -99;
-        }
-    </style>
+
 </head>
 
 <body>
@@ -35,7 +27,7 @@
                 </li>
 
                 <li class="list-items">
-                    <a href="#">HOME</a>
+                    <a href="home.html">HOME</a>
                 </li>
                 <li class="list-items">
                     <a href="#">CATEGORIES</a>
@@ -44,7 +36,7 @@
                     <a href="about.html">ABOUT</a>
                 </li>
                 <li class="list-items">
-                    <a href="#">CONTACT</a>
+                    <a href="contact.html">CONTACT</a>
                 </li>
                 <li class="list-items">
                     <a href="#" id="nav-sign">SIGN UP</a>
@@ -56,17 +48,16 @@
     </nav>
 
     <!-- START OF HEADER IMAGE -->
-    <img src="../assets/header-image/about-header.jpg" alt="header-image">
+    <img src="../assets/header-image/about-header.jpg" alt="header-image" class="banner-image">
 
-    <div style="margin-top: -470px; text-align: center;">
-
+    <div style="margin-top: -450px; text-align: center;">
 
         <h1 style="font-size: 80px; font-weight: 650px;">WHY <span class="lobster-regular">CHOOSE </span> US? </h1>
-        <h2 style="margin-top: -60PX; margin-bottom: 25px; font-size: 22px; font-weight: 300px;">"Beyond the <span
-                class="lobster-regular"> POPCORN </span> Into the <span class="lobster-regular"> HEART </span> of film."
+        <h2 style="margin-top: -60PX; margin-bottom: 25px; font-size: 22px; font-weight: 300px;">"Beyond the
+          popcorn into the heart of film."
         </h2>
 
-        <a  id="about-banner-button" href="navbar.html" style="text-decoration: none;"> GET MORE
+        <a  id="about-banner-button" href="contact.html" style="text-decoration: none;"> GET MORE
             INFO </a>
 
     </div>
