home, categories 50% done

--- a/CINESTOP/html/about.html
+++ b/CINESTOP/html/about.html
@@ -30,7 +30,7 @@
                     <a href="home.html">HOME</a>
                 </li>
                 <li class="list-items">
-                    <a href="#">CATEGORIES</a>
+                    <a href="category.html">CATEGORIES</a>
                 </li>
                 <li class="list-items">
                     <a href="about.html">ABOUT</a>
